--- a/package.json
+++ b/package.json
@@ -1,48 +1,27 @@
 {
-	"name": "portfolio-website",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"format": "prettier --write src",
-		"prepare": "husky install",
-		"test": ""
-	},
-	"dependencies": {
-		"@next/third-parties": "^14.1.3",
-		"next": "14.1.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-icons": "^4.12.0",
-		"tailwind-merge": "^2.1.0"
-	},
-	"devDependencies": {
-		"@commitlint/cli": "^18.4.3",
-		"@commitlint/config-conventional": "^18.4.3",
-		"@types/node": "^20.10.2",
-		"@types/react": "^18.2.41",
-		"@types/react-dom": "^18.2.17",
-		"autoprefixer": "^10.4.16",
-		"braces": "^3.0.3",
-		"eslint": "^8.55.0",
-		"eslint-config-next": "14.0.2",
-		"husky": "^8.0.0",
-		"postcss": "^8.4.32",
-		"tailwindcss": "^3.3.5",
-		"typescript": "^5.3.2"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"src/**/*.{ts,js,jsx,tsx}": [
-			"pnpm format",
-			"pnpm lint"
-		]
-	}
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.4"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.4",
+    "@eslint/eslintrc": "^3"
+  }
 }
